<resources>
    <string name="text_home">HOME</string>
    <string name="text_login">Login</string>
    <string name="edit_username">username</string>
    <string name="edit_password">password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Sign up</string>
    <string name="text_email">E-mail</string>
    <string name="text_sign_up">sign up</string>
    <string name="edit_sign_up_email">example.s@kkumail.com</string>
    <string name="edit_sign_up_username">example</string>
    <string name="edit_sign_up_password">Example1234</string>
    <string name="edit_sign_up_confirm_password">Example1234</string>
    <string name="button_signup">Sign Up</string>
    <string name="text_confirm_password">confirm password</string>
    <string name="toolbar_char">CHAT</string>
    <string name="name_createroom">Name room</string>
    <string name="date_createroom">Date</string>
    <string name="time_createroom">Time</string>
    <string name="place_createroom">Place</string>
    <string name="other_room">Other</string>
    <string name="page_login">Login</string>
    <string name="text_topic">Header</string>
    <string name="text_by">by</string>
    <string name="text_subject">subject</string>
    <string name="text_time">time</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="request_friend">Request Friend</string>
    <string name="search">Search</string>
    <string name="faculty">Faculty : EN</string>
    <string name="username">Username : A</string>
    <string name="id">ID</string>
    <string name="username_radio">Username</string>
    <string name="toolbar_profile">PROFILE</string>
    <string name="account_info">Account Info</string>
    <string name="name_profile">Name</string>
    <string name="name_head">Name</string>
    <string name="username_profile">\@</string>
    <string name="back_to_home">Back to Home</string>
    <string name="major_profile">Major</string>
    <string name="major_en">Engineer</string>
    <string name="gender_profile">Gender</string>
    <string name="female">Female</string>
    <string name="year">Year</string>
    <string name="year_3">3</string>
    <string name="toolbar_settings">SETTINGS</string>
    <string name="profile_settings">Profile</string>
    <string name="account_settings">Account</string>
    <string name="report_settings">Report a Problem</string>
    <string name="logout_settings">Log out</string>
    <string name="toolbar_report">REPORTS</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="what_wrong">What went wrong?</string>
    <string name="take_screenshot">Take a screenshot</string>
    <string name="select_image_gallery">Select image from gallery</string>
    <string name="text_time_num">9.00 AM</string>
    <string name="text_library">library</string>
    <string name="text_hour">time : 3 hour</string>
    <string name="text_people">people : </string>
    <string name="text_title">Read a book for exam</string>
    <string name="text_pin">PIN : 123456</string>
    <string name="text_host">Saranrat</string>
    <string name="text_detail">detail</string>
    <string name="text_subject_math">mathematics</string>
    <string name="text_phone">081-2345678</string>
    <string name="text_time_to_time">9.00-12.00 AM</string>
    <string name="text_member">join people</string>
    <string name="button_join">join</string>
    <string name="text_date">date : </string>
    <string name="app_name">WeRead</string>
    <string name="text_place">place</string>
    <string name="text_id_show">ID  ex. 603040123-4</string>
<<<<<<< HEAD
    <string name="createroomText">Create room</string>
<<<<<<< HEAD
    <string name="startTime">start : </string>
=======
    <string name="home_button">Home</string>
    <string name="friend">Friend</string>
    <string name="chat">Chat</string>
    <string name="setting">Setting</string>
    <string name="toolbar_account">ACCOUNT</string>
    <string name="personal_information">Personal Information</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="phone_account" translatable="false">083-333-3333</string>
    <string name="id">ID</string>
    <string name="id_account" translatable="false">60304040000</string>
>>>>>>> 0cd7c8937c3bf9f0c86b57b275be244584543870
=======
    <string name="startTime">start : 9.00 AM</string>
    <string name="text_page">page</string>
    <string name="page_number">"1/2 "</string>
    <string name="page_number_two" translatable="false">"2/2 "</string>
>>>>>>> 727db7720ae3c30bc9a27327237fcf7fba02bf07


</resources>
