<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".createRoomActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolBar"
        android:layout_width="match_parent"
        app:title=" "
        android:background="@color/colorPrimary"
        android:layout_height="?android:attr/actionBarSize"
        tools:targetApi="honeycomb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_char"
                android:textColor="@color/colorToolBar"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:id="@+id/toolbar_addfriend_title" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_back"
                android:backgroundTint="@color/colorToolBar"
                android:onClick="HomePage" />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorToolBar"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_noti" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/fill_createroom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="@drawable/background_creatroom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolBar">

        <EditText
            android:id="@+id/edit_nameroom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/circle_createroom"
            android:hint="room name"
            android:paddingLeft="25dp"
            android:textColor="#0F0E0E" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/circle_createroom"
            android:hint="@string/date_createroom"
            android:paddingLeft="25dp"
            android:textColor="#0F0E0E" />

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/circle_createroom"
            android:hint="@string/time_createroom"
            android:paddingLeft="25dp"
            android:textColor="#0F0E0E" />

        <EditText
            android:id="@+id/edit_place"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/circle_createroom"
            android:hint="@string/place_createroom"
            android:paddingLeft="25dp"
            android:textColor="#0F0E0E" />

        <EditText
            android:id="@+id/edit_details"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/circle_createroom"
            android:hint="@string/other_room"
            android:paddingLeft="25dp"
            android:textColor="#0F0E0E" />

        <Button
            android:id="@+id/button_create"
            android:layout_width="212dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/create_button"

            android:text="Create"
            android:textAlignment="center"
            android:textColor="#0F0E0E" />

    </LinearLayout>
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/toolBarBottom"
        tools:targetApi="honeycomb"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:weightSum="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:background="@mipmap/ic_home"
                android:onClick="HomePage">

            </ImageView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:background="@mipmap/ic_friend"
                android:onClick="friendPage">

            </ImageView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:background="@mipmap/ic_chat"
                android:onClick="friendPage">

            </ImageView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:background="@mipmap/ic_setting"
                android:onClick="settingsPage">

            </ImageView>
        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>